# ember-interpreter

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ember/: __init__.py  __main__.py  ast_nodes.py  builtins.py  environment.py  errors.py  interpreter.py  lexer.py  parser.py  repl.py  runner.py  tokens.py
examples/: closures.ember  fibonacci.ember  fizzbuzz.ember  guessing_game.ember  hello.ember  sorting.ember
tests/: conftest.py  test_builtins.py  test_errors.py  test_examples.py  test_interpreter.py  test_lexer.py  test_parser.py
